k8s/gateway/gatewayClassName.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ec-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  description: "ECサイト用の GatewayClass"
  # データプレーンのService種別などをEnvoyProxyリソースで指定する
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: ec-gateway-config
    namespace: ec-system
