k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ec-apigate-way
  namespace: ec-system
  labels:
    app.kubernetes.io/name: ec-apigate-way
    app.kubernetes.io/part-of: ec-microservices
spec:
  gatewayClassName: ec-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
---


apiVersion: v1
kind: Service
metadata:
  name: ec-gateway-entry
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: ec-gateway-entry
    app.kubernetes.io/part-of: ec-microservices
spec:
  type: ClusterIP
  selector:
    gateway.envoyproxy.io/owning-gateway-name: ec-apigate-way
    gateway.envoyproxy.io/owning-gateway-namespace: ec-system
  ports:
  - name: http
    port: 80
    targetPort: 10080
    protocol: TCP
