k8s/gateway/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: ec-system
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: ec-microservices
spec:
  parentRefs:
  - name: ec-apigate-way
    namespace: ec-system
    sectionName: http

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      namespace: ec-frontend
      port: 80
    timeouts:
      request: 15s
